@@ -1,3 +1,10 @@
+24 November 2008: Wouter
+	- document that the user of the server daemon needs read privileges
+	  on the keys and certificates generated by unbound-control-setup.
+	  This is different per system or distribution, usually, running the
+	  script under the same username as the server uses suffices.
+	  i.e.  sudo -u unbound unbound-control-setup
+
 21 November 2008: Wouter
 	- fixed tcp accept, errors were printed when they should not.
 	- unbound-control-setup.sh removes read/write permissions other
